--- a/CinemaShiftApp/app/src/main/res/values/strings.xml
+++ b/CinemaShiftApp/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="bottom_bar_profile">Профиль</string>
     <string name="error_film_not_found">Ошибка. Фильм не найден</string>
     <string name="see_schedule">Посмотреть расписание</string>
+    <string name="schedule_title">Расписание</string>
 
 </resources>
