--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,9 @@
     <string name="see_schedule">Посмотреть расписание</string>
     <string name="schedule_title">Расписание</string>
     <string name="film_details_title">Сведения о фильме</string>
+    <string name="continue_button">Продолжить</string>
+    <string name="seat_selection_title">Выбор места</string>
+    <string name="row">Ряд</string>
+    <string name="seat">Место</string>
 
 </resources>
