--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,8 @@
     <string name="seat_selection_title">Выбор места</string>
     <string name="row">Ряд</string>
     <string name="seat">Место</string>
+    <string name="add_ticket">Еще билет</string>
+    <string name="ticket_info">Билет: ряд %1$d, место %2$d</string>
+    <string name="delete_ticket">Удалить билет</string>
 
 </resources>
